--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,6 +86,19 @@ h6 {
   background: rgba(25, 28, 31, 0.8);
 }
 
+.fixed-top{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+@media (max-width : 992px){
+  .fixed-top{
+    display: flex;
+    justify-content: end;
+  }
+}
+
 /*--------------------------------------------------------------
 # Navigation Menu
 --------------------------------------------------------------*/
