feat: Update My Profile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -138,6 +138,19 @@ h6 {
   color: #ffb727;
 }
 
+.fixed-top{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+@media (max-width : 992px){
+  .fixed-top{
+    display: flex;
+    justify-content: end;
+    
+  }
+}
 
 
 /**
